<resources>
    <string name="app_name">CPS731Project</string>
    <string name="ezFood">EZ Food</string>
    <string name="createAccount">Create An Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginHere">Please Login</string>
    <string name="login">LOGIN</string>
    <string name="dontHaveAccount">Don\'t have an account? Create one here</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="btnAdd">ADD</string>
    <string name="whatToEat">What do you want to eat?</string>
    <string name="ingredientsYouHave">Ingredients You Have</string>
    <string name="btnGo">GO</string>
    <string name="btnLogout">LOGOUT</string>
    <string name="btnDeleteAcc">DELETE ACCOUNT</string>
    <string name="myAccount">My Account</string>
    <string name="account">Account</string>
    <string name="txtName">Name</string>
    <string name="txtEmail">Email</string>
    <string name="txtRatings">Ratings</string>
    <string name="favourites">Favourites</string>
    <string name="none">No favourites yet</string>
    <string name="deleteAll">DELETE ALL FAVOURITES</string>
    <string name="history">History</string>
    <string name="none2">No history yet</string>
    <string name="deleteAll2">DELETE ALL HISTORY</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="grocery">Grocery</string>
    <string name="title_activity_show_recipe">ShowRecipe</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>
    <string name="gps">GPS</string>
    <string name="click">Search grocery stores near me</string>
    <string-array name="meals">
        <item>Snack</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
</resources>