<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainActivity"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/grocery"
        android:title="@string/grocery"
        android:icon="@drawable/ic_grocery"
        />

    <item
        android:id="@+id/viewFavourites"
        android:title="@string/favourites"
        android:icon="@drawable/ic_favorite" />
    <item
        android:id="@+id/viewHistory"
        android:title="@string/history"
        android:icon="@drawable/ic_history"/>
    <item
        android:id="@+id/viewAccount"
        android:title="@string/account"
        android:icon="@drawable/ic_account"/>
</menu>